# dice

./: .gitignore  LICENSE  README.md
doc/: dice.md  rational.md
docs/: dice.md  index.md  rational.md
source/: CMakeLists.txt  dice-test.cpp  dice.cpp  dice.hpp  rational-test.cpp  rational.cpp  rational.hpp  unit-test.cpp  unit-test.hpp
source/dice/: dice.cpp  dice.hpp  main.cpp  rational.cpp  rational.hpp
source/test/: dice-test.cpp  rational-test.cpp  unit-test.cpp
